# chroma

./: .clang-format  .gitignore  .gitignore.orig  .gitignore~  .gitmodules  AUTHORS  CMakeLists.txt  COPYING  ChangeLog  ChromaConfig.cmake.in  Chroma_usage_2015.html  INSTALL  INSTALL.ibm  LICENSE  Makefile.am  Makefile.in  NEWS  README  TODO  acinclude.m4  aclocal.m4  autogen.sh  chroma-config.in  chroma_locations.txt  configure  configure.ac  configure.orig  index.html  metadata.yml
USQCDsoftware_files/: style.css
autom4te.cache/: output.0  requests  traces.0  traces.1
cmake/: CheckSanitizeOpts.cmake  FindGMP.cmake  FindLevelZero.cmake
docs/: Makefile.am  Makefile.in  chromadoc  chromadoc.in  faq.txt  large_nc.txt  readme_hisq  readme_level3_staggered  superb_tasks.md  superb_tensors.md  tutorial.html
docs/notes/: N_N_5d_ov.tex  anisoHQ.tex  baryon_3pt.tex  chiral.tex  chroma_gamma_matrices.tex  deltanotes.tex  force.tex  gamma_conventions.tex  hmc.tex  manual.tex  meson_corr_construct.tex  multicg.tex  o3_to_u1.tex  overlap_5dim.tex  overlap_proj_hmc.tex  partfrac5D.tex  pinotes_v2.tex  rossi_basis_v2.tex  sequential_source.tex  three_point.eps  trunc_ov_5d.tex
include/: Makefile.am  Makefile.in  chroma.h  chroma_scalarsite_defs.h  chroma_scalarsite_dwdefs.h  chromabase.h  chromainc.h  common_declarations.h  common_declarations.h.old  common_io.h  defs.h  fermact.h  fermact_array.h  fermactarray.h  fermbc.h  gaugeact.h  gaugebc.h  geom.h  handle.h  invtype.h  linearop.h  linop.h  linopfound.h  primitives.h  state.h  szin.h  szinbase.h  szininc.h
install_scripts/: chroma-3.17.spec
install_scripts/LIVERPOOL/: Makefile_link  get_chroma.csh  install_chroma.sh
install_scripts/NERSC/: configure_chroma.sh
install_scripts/cygwin/: config_chroma_parscalar-single.sh  config_chroma_scalar.sh
install_scripts/jlab/: build.csh  build2m-intel.csh  build2m.csh  build3g.csh  build_some.csh  build_some_k2.6.csh  config_chroma_parscalar-gigE-double.sh  config_chroma_parscalar-gigE.sh  config_chroma_parscalar-gm-double.sh  config_chroma_parscalar-gm.sh  config_chroma_parscalar-single.sh  config_chroma_scalar  config_chroma_scalar.sh  install_some.csh  install_some_all.csh
lib/: CMakeLists.txt  Makefile  Makefile.am  Makefile.am.~1.29.~  Makefile.in  boundcond.h  central_tprec_fermact_w.h  central_tprec_linop.h  chroma.h  chroma_config.h  chroma_config_internal.h.cmake.in  chroma_config_internal.h.in  chroma_config_internal.h.in~  chroma_scalarsite_defs.h  chroma_scalarsite_dwdefs.h  chromabase.h  chromainc.h  common_declarations.h  constant.cc  create_state.h  eo3dprec_s_cprec_t_wilstype_fermact_w.h  eo_linop.h  eo_prec_linop.h  eoprec_constdet_linop.h  eoprec_constdet_wilstype_fermact_w.h  eoprec_linop.h  eoprec_logdet_linop.h  eoprec_logdet_wilstype_fermact_w.h  eoprec_wilstype_fermact_w.h  fermact.h  fermact.orig.h  fermbc.h  funcmap.h  gaugeact.h  gaugebc.h  geom.h  handle.h  iluprec_s_cprec_t_wilstype_fermact_w.h  invtype.h  ldag.h  (+41 more)
lib/actions/: actions.h
lib/geom/: geom.cc  setph.cc  setph.h
lib/gtest/: gtest.h
lib/init/: chroma_init.cc  chroma_init.h  local_rank.cc  local_rank.h  qdpc_init.c  qdpc_init.h
lib/io/: aniso_io.cc  aniso_io.h  barcomp_io.cc  barcomp_io.h  bc_io.cc  bc_io.h  cern_io.h  cfgtype_io.cc  cfgtype_io.h  cppacs_io.cc  cppacs_io.h  eigen_io.cc  eigen_io.h  fermact_paramio.cc  fermact_paramio.h  follana_io.cc  follana_io_s.cc  follana_io_s.h  gauge_io.cc  gauge_io.h  gaugeact_io.cc  gaugeact_io.h  gaugebc_io.cc  gaugebc_io.h  hamiltonian_io.cc  hamiltonian_io.h  inline_io.cc  inline_io.h  io.h  io_s.h  io_w.h  kyugauge_io.cc  kyugauge_io.h  kyuqprop_io.cc  kyuqprop_io.h  mc_io.cc  mc_io.h  md_io.cc  md_io.h  milc_io.cc  (+46 more)
lib/meas/: meas.h
lib/update/: abs_hamiltonian.h  abs_symp_updates.h  field_state.h  hamiltonian.h  hyb_int.h  (+3 more)
mainprogs/: Makefile  Makefile.am  Makefile.in  mainprogs.h
mainprogs/main/: CMakeLists.txt  DATA_s  ExampleBuildingBlocks.cc  Makefile  Makefile.am  Makefile.in  apesmear.cc  bar3ptfn.cc  baryon_ops_red_dil.cc  cfgtransf.cc  chroma.cc  collect_multi_propcomp.cc  collect_propcomp.cc  const_hmc.cc  dwf_seqprop.cc  gbaryonall2all.cc  group_baryon_run.cc  hadspec.cc  hmc.cc  hmc_new.cc  hypsmear.cc  hypsmear3d.cc  hypsmear4d.cc  main.h  make_baryon_ops.cc  make_meson_ops.cc  make_seeds.cc  make_source.cc  mg_hmc.cc  mres.cc  multi_propagator.cc  multi_propagator_comp.cc  my_qqq.cc  propagator.cc  propagator_comp.cc  propagator_hack.cc  purgaug.cc  purgaug_fixed_bc.cc  qpropadd.cc  qpropgfix.cc  (+15 more)
mainprogs/tests/: CMakeLists.txt  DATA_v3  INPUT_W.xml  INPUT_t_propagator_twisted.xml  Makefile  Makefile.am  Makefile.in  Makefile.in.orig  chroma_gtest_env.h  dummy.xml  exp_clover_tests.cc  fgmres_dr_tests.cc  invcg2_prec_wilson.cc  invcg2_prec_wilson.h  invcg2_timing_hacks_2.cc  invcg2_timing_hacks_2.h  invcg2_timing_hacks_3.cc  invcg2_timing_hacks_3.h  multi_rhs_tests.cc  multi_rhs_xml.h  multishift_quda.xml  quda_cmat_tests.cc  quda_cmat_xml.h  symm_prec_tests.cc  symm_prec_xml.h  t_aniso_gaugeact.cc  t_aniso_sym_force.cc  t_ape_smear.cc  t_bicgstab.cc  t_circular_buffer.cc  t_clover.cc  t_conslinop.cc  t_db.cc  t_disc_loop_s.cc  t_dslashm.cc  t_dwf4d.cc  t_dwflinop.cc  t_dwflocality.cc  t_exp_clover.cc  t_fermion_loop_w.cc  (+91 more)
other_libs/: Makefile.am  Makefile.in
scripts/: README_buildtest.sh  build.sh  build_include_headers.pl  build_libchroma_sources.pl  check_regres_runner.pl  collect_regres_reports.pl  config.pl  create_regres_runner.pl  fix_std_namespace.csh  formfact_pion.pl  link.pl  makemake_chroma.sh  makemake_qdp.sh  makemake_qmp.sh  qdpjit_mpirun_runner.sh  queue_chroma_regressions.pl  regenerate.csh  regres_report_to_html.xsl  run_chroma_xmldiff.pl  run_chroma_xmldiff_qdpjit.pl  run_xmldiff.pl  strip_bar3ptfn.pl  strip_spectrum_w.pl  wallformfac_delta.pl  wallformfac_nucl.pl  wallformfac_pion.pl  wallformfac_rhopi.pl
tests/: gfix.cfg1  gtransf.lime1  regres.pl  t_minvert_qphix.ini.xml  t_minvert_quda.ini.xml  t_remez.ini.xml  t_solver_accum.ini.xml  test_purgaug.cfg1
tests_x32/: nersc.cfg  regres.pl
(+4660 files in other folders)
